--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -31,10 +31,11 @@
   text-decoration: none;
   font-size: 1.5rem;
   color: white;
+  margin-right: 3rem;
 }
 
 .header a:hover,
 .header a:active,
 .header a.active {
-  color: white;
+  color: #2596be;
 }
