--- a/src/components/recipes/RecipeDetails.module.css
+++ b/src/components/recipes/RecipeDetails.module.css
@@ -10,8 +10,8 @@
 .link {
   font: inherit;
   cursor: pointer;
-  color: #77002e;
-  border: 1px solid #77002e;
+  color: #2596be;
+  border: 1px solid #2596be;
   background-color: transparent;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
