--- a/src/components/recipes/RecipeSearch.module.css
+++ b/src/components/recipes/RecipeSearch.module.css
@@ -1,4 +1,4 @@
-.Inspiration {
+/* .Inspiration {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -68,4 +68,4 @@
   height: 150px;
   object-fit: cover;
   border-radius: 50%;
-}
+} */
