--- a/src/components/recipes/RecipeItem.module.css
+++ b/src/components/recipes/RecipeItem.module.css
@@ -62,11 +62,11 @@
 .delete {
   color: red;
   cursor: pointer;
-  opacity: 1; /* Initial opacity */
-  transition: opacity 0.8s ease-in-out; /* Smooth opacity transition */
+  opacity: 1;
+  transition: opacity 0.8s ease-in-out;
 }
 
 .delete:hover {
-  color: #d32f2f; /* Darker red on hover */
-  opacity: 0.2; /* Slightly transparent on hover */
+  color: #d32f2f;
+  opacity: 0.2;
 }
