--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -1,19 +1,20 @@
 .header {
-  width: 100%;
-  height: 5rem;
+  background-color: black;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #be2596;
-  border-radius: 5px;
+  height: 5rem;
+  padding: 0 2%;
 }
 
 .logo {
   font-size: 2rem;
   color: white;
   font-weight: bold;
-  padding-left: 5%;
+  text-decoration: none;
 }
+
 
 .header ul {
   list-style: none;
@@ -24,18 +25,16 @@
 }
 
 .header li {
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 .header a {
   text-decoration: none;
   font-size: 1.5rem;
   color: white;
-  margin-right: 3rem;
+  transition: color 0.2s ease-in-out;
 }
 
-.header a:hover,
-.header a:active,
-.header a.active {
+.header a:hover {
   color: #2596be;
 }
